--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "eslint-config-airbnb-base": "^14.2.0",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
@@ -23,12 +25,14 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "eslint": "^5.16.0",
     "typescript": "~3.9.5"
   },
   "private": true
