--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "expo": "~38.0.8",
+    "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
