--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@ui-kitten/components": "^5.0.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
